test(oneliner): add runtime test and improve output